fix: color contrast ratio

--- a/components/common/header/header.module.scss
+++ b/components/common/header/header.module.scss
@@ -90,7 +90,7 @@
     }
   }
   &__contact-link {
-    @apply bg-blue-9;
+    @apply bg-blue-11;
     @apply text-white;
     @apply py-3;
     @apply px-5;
